gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/valid/mapa_simples_1.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346936524680" ID="ID_1631033891" MODIFIED="1346936527557" TEXT="MM">
<node CREATED="1346936528019" ID="ID_631877200" MODIFIED="1346936543575" POSITION="right" TEXT="UC: Cen&#xe1;rio 1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346936544203" ID="ID_1355313329" MODIFIED="1346936560432" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o:  A&#xe7;&#xe3;o 1">
<node CREATED="1346936561059" ID="ID_130464107" MODIFIED="1346940000013" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 2 N&#xc3;O COMENTADA">
<node CREATED="1346936577869" ID="ID_568411710" MODIFIED="1346936685053" TEXT="Sequ&#xea;ncia: 3&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 3">
<node CREATED="1346936686881" ID="ID_1304479391" MODIFIED="1346941252187" TEXT="Sequ&#xea;ncia: 4&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o 4"/>
</node>
</node>
</node>
</node>
</node>
</map>
