gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/cenario_sem_obrigatorios_4.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346681600074" ID="ID_1604647654" MODIFIED="1346681602445" TEXT="MM">
<node CREATED="1346681603062" ID="ID_952950334" MODIFIED="1346681694825" POSITION="right" TEXT="Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346681615903" ID="ID_1071819749" MODIFIED="1346681622883" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1"/>
</node>
</node>
</map>
